# komodo

./: Cargo.toml  runfile.toml
client/core/rs/: Cargo.toml
client/core/rs/src/api/read/: mod.rs
client/core/rs/src/entities/: builder.rs  mod.rs  server.rs  stats.rs
client/core/rs/src/entities/config/: core.rs  periphery.rs
client/core/rs/src/entities/config/cli/args/: key.rs  mod.rs
client/core/ts/: package.json
client/core/ts/src/: types.ts
client/periphery/rs/: Cargo.toml
client/periphery/rs/src/: connection.rs  connections.rs  lib.rs  message.rs  request.rs  terminal.rs  ws.rs
client/periphery/rs/src/api/: terminal.rs
client/periphery/rs/src/connection/: client.rs  mod.rs  server.rs
compose/: compose.env
frontend/public/client/: types.d.ts
frontend/src/components/: layouts.tsx  util.tsx
frontend/src/components/resources/builder/: config.tsx
frontend/src/components/resources/server/: config.tsx  index.tsx
frontend/src/components/topbar/: components.tsx  index.tsx
frontend/src/pages/home/: all_resources.tsx  dashboard.tsx
lib/cache/src/: lib.rs
lib/noise/: Cargo.toml
lib/noise/src/: lib.rs
lib/response/src/: lib.rs
lib/transport/: Cargo.toml
lib/transport/src/: auth.rs  bytes.rs  channel.rs  client.rs  lib.rs  server.rs
lib/transport/src/websocket/: axum.rs  mod.rs  tungstenite.rs
