[package]
name = "transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
axum.workspace = true
rand.workspace = true
snow.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid.workspace = true
